--- a/css/style.css
+++ b/css/style.css
@@ -3,32 +3,51 @@
     margin:auto;
 }
 
+header {
+  height: 60px;
+}
+
 h1 {
     /* margin: 10px; */
     position: absolute;
     font-weight: bold;
-    font-size: 24px
+    font-size: 24px;
+    line-height: 60px;
+}
+
+p {
+  line-height: 24px;
+  font-size: 16px;
 }
 
 .global-nav {
-    margin-top: 15px;
+    margin: auto;
     text-align: center;
+    line-height: 60px;
 }
 
 .global-nav .nav-item {
     display: inline-block;
-    margin: 0 10px;
+    margin: auto 10px;
     float: right;
+    font-weight: bold;
+}
+
+.nav-item a {
+  text-decoration: none;
+  color: black;
 }
 
 .heading {
     background-image: url('../img/main-vsual-nontitle.png');
-    height: 647px;
+    background-size: cover;
     width: 100%;
 }
 
 h2 {
-    font-size: 48px;
+  font-size: 48px;
+  font-weight: bold;
+  margin: 30px 0px;
 }
 
 .heading .container {
@@ -36,6 +55,99 @@ h2 {
     padding: 100px 0px;
 }
 
-header {
-    height: 48px;
+.heading p {
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  line-height: 28px;
+}
+
+
+
+h3 {
+  font-weight: bold;
+  font-size: 28px;
+  text-align: center;
+}
+
+.container div {
+  margin-top: 48px;
+}
+
+.about-content {
+  height: 300px;
+}
+
+.about-content img {
+  /* height: 100%; */
+  width: 48%;
+  display: inline-block;
+  /* margin: auto 10px; */
+  float: left;
+}
+
+.about-content p {
+  /* height: 100%; */
+  width: 48%;
+  display: inline-block;
+  float: right;
+}
+
+.course-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.course-item {
+  width: 30%;
+  /* display: inline-block; */
+}
+
+.course-item img {
+  width: 100%;
+}
+
+.course-item p {
+  line-height: 24px;
+}
+
+.inquiry-content {
+  text-align: center;
+  padding-bottom: 120px;
+}
+
+#mail-address {
+  height: 48px;
+  width: 600px;
+  font-size: 18px;
+  border-radius: 24px;
+  padding-left: 16px;
+  border: 3px solid #cccccc;
+  color: #555555;
+  display: block;
+  margin: auto;
+}
+
+#inquiry-button {
+  height: 72px;
+  width: 400px;
+  display: block;
+  margin: 20px auto;
+  background-color: #EC6D64;
+  color: white;
+  font-weight: bold;
+  font-size: 24px;
+  border: 0px;
+  border-radius: 5px;
+}
+
+footer {
+  padding-bottom: 36px;
+}
+
+footer p {
+  text-align: right;
+  font-size: 12px;
+  line-height: 36px;
+  color: #555555;
 }
